# learn_cmake

./: README.md
step1/: CMakeLists.txt  build.sh  hello.cpp  main.cpp
step2/: CMakeLists.txt  build_shared.sh  build_static.sh
step3/: CMakeLists.txt
step3/src/: CMakeLists.txt
step3/test/: main.cpp
step4/: CMakeLists.txt  build_cmake.sh  build_shared.sh
step4/src/: good_morning.cpp  hello.cpp
step5/: CMakeLists.txt  build_link.sh
step6/github/: CMakeLists.txt
step6/header_only/: CMakeLists.txt
